--- a/CSS Day 2/day2.html
+++ b/CSS Day 2/day2.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="red-box">
-        <div class="grey-box"></div>
-        <div class="grey-box"></div>
-        <div class="grey-box"></div>
+        <div class="grey-box">Hover</div>
+        <div class="grey-box">On</div>
+        <div class="grey-box">These</div>
     </div>
 </body>
 
