--- a/CSS Day 4/day4.html
+++ b/CSS Day 4/day4.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="dots">
+    <div class="dots box">
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
